# oil-and-rope

./: .babelrc  .coveragerc  .dockerignore  .editorconfig  .env.example  .envrc.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .jsbeautifyrc  .pylintrc  .travis.yml  Aptfile  Dockerfile  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  runtests.py  setup.cfg  start.sh  test_oilandrope.sqlite3-journal  webpack.config.js
.github/: CODEOWNERS
.github/workflow/: main.yml  pythonapp.yml
.github/workflows/: django.yml  django_dev.yml  main.yml  node.yml  node_dev.yml  pullrequest.yml
api/: __init__.py  apps.py  baker_recipes.py  permissions.py  urls.py  views.py
api/permissions/: chat.py  registration.py  roleplay.py
api/routers/: chat.py  dynamic_menu.py  registration.py  roleplay.py  routers.py
api/serializers/: api.py  chat.py  common.py  dynamic_menu.py  registration.py  roleplay.py
api/validators/: chat.py
api/viewsets/: api.py  chat.py  dynamic_menu.py  mixins.py  registration.py  roleplay.py
bot/: __init__.py  admin.py  apps.py  bot.py  categories.py  commands.py  config.py  consumers.py  embeds.py  enums.py  exceptions.py  models.py  pydantic_models.py  routing.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
bot/cogs/: __init__.py  misc.py  rol.py
bot/commands/: checkers.py
bot/config/: example_configuration.ini
bot/discord_api/: embeds.py  enums.py  models.py  utils.py
bot/migrations/: 0001_initial.py  0002_auto_20200929_1110.py  0003_auto_20210630_1729.py  0004_auto_20210724_1422.py
chat/: admin.py  apps.py  baker_recipes.py  consumers.py  models.py  package-lock.json  permissions.py  routing.py  serializers.py  urls.py  views.py  viewsets.py
chat/migrations/: 0001_initial.py  0002_auto_20200429_1058.py  0002_auto_20200929_1110.py  0002_initial.py  0003_alter_chat_entry_created_at_and_more.py  0003_auto_20200719_1440.py  0003_auto_20200918_0920.py  0003_auto_20210622_1301.py  0004_alter_chat_id_alter_chatmessage_id.py  0004_auto_20200919_1228.py  0004_auto_20210630_1729.py  0005_alter_chatmessage_options.py  0005_auto_20200919_1238.py  0006_chat_discord_id.py  0007_alter_chat_name.py
common/: __init__.py  admin.py  apps.py  baker_recipes.py  enums.py  mixins.py  models.py  urls.py
common/constants/: models.py
common/context_processors/: utils.py
common/files/: upload.py  utils.py
common/filters/: forms.py  mixins.py
common/forms/: __init__.py  forms.py  layout.py  mixins.py  widgets.py
common/migrations/: 0001_initial.py  0002_alter_track_entry_created_at_and_more.py  0003_alter_track_description.py  0004_alter_track_id.py  0005_vote_vote_common_vote_user_id_dea87d_idx_and_more.py  0006_alter_vote_content_type.py  0006_alter_vote_content_type_image_and_more.py  0007_image_image_common_imag_content_4fea9c_idx.py
common/templatetags/: string_utils.py
common/tools/: __init__.py  crypt.py  mail.py
common/utils/: __init__.py  auth.py  env.py  faker.py
common/validators/: __init__.py  files.py
common/views/: __init__.py  auth.py  edit.py  json.py  list.py  mixins.py
compose/channels/: command.sh
compose/django/: Dockerfile  command.sh  django.env  django_bash_completion.sh  entrypoint.sh
compose/litecord/: Dockerfile  config.py  nginx.conf
compose/nginx/: nginx.conf
compose/oilandrope/: Dockerfile  entrypoint.sh
compose/postgres/: postgres.env
core/: admin.py  apps.py  checks.py  consumers.py  context_processors.py  exceptions.py  models.py  types.py  urls.py  views.py
core/tests/: access_tests.py
data/dynamic_menu/: initial_menu.json
dev_env/: DatabasePOSTGIS.dockerfile  OilAndRope.dockerfile  docker-compose.yml
docker/: docker-entrypoint.sh
docker/3.10/: Dockerfile.dev  Dockerfile.prod
docker/3.9/: Dockerfile.dev  Dockerfile.prod
docs/: conf.py  index.rst
dynamic_menu/: __init__.py  admin.py  apps.py  context_processors.py  enums.py  forms.py  managers.py  middleware.py  models.py  urls.py  utils.py  views.py
dynamic_menu/forms/: __init__.py  forms.py  layout.py
dynamic_menu/migrations/: 0001_initial.py  0002_auto_20191211_0814.py  0002_auto_20210630_1711.py  0002_auto_20211109_1050.py  0003_alter_dynamicmenu_options_and_more.py  0003_auto_20210727_1555.py  0004_alter_dynamicmenu_appended_text_and_more.py  0004_alter_dynamicmenu_id.py  0004_auto_20200429_1058.py  0005_alter_dynamicmenu_menu_type.py  0005_auto_20200719_1440.py  0005_auto_20200722_1209.py  0006_auto_20200724_0956.py
frontend/: apps.py  package-lock.json  urls.py
frontend/src/: index.js  renderCalendar.js  renderCalendar.jsx  renderChat.js  renderChat.jsx  renderMessages.js  renderTreeView.jsx  renderUserCheckButton.js  renderUserCheckButton.jsx
heroku/bot/: start.sh
heroku/web/: start.sh
heroku/websocket/: start.sh
oar_email/: apps.py  urls.py  utils.py  views.py
oilandrope/: .editorconfig  __init__.py  asgi.py  dev_settings.py  gunicorn_conf.py  heroku_settings.py  manage.py  pytest.ini  routing.py  run.py  runner.py  runtests.py  settings.py  urls.py  wsgi.py
oilandrope/bot/: admin.py  (+3 more)
registration/: __init__.py  admin.py  apps.py  backends.py  baker_recipes.py  forms.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
requirements/: requirements-base.txt  requirements-develop.txt
roleplay/: __init__.py  admin.py  apps.py  baker_recipes.py  enums.py  forms.py  managers.py  mixins.py  models.py  serializers.py  translation.py  urls.py  views.py  viewsets.py
sheet/: admin.py  apps.py  models.py
tests/: __init__.py  conftest.py  test_oilandrope.sqlite3-journal  utils.py
(+420 files in other folders)
