[tool.poetry]
name = "oil-and-rope"
version = "0.0.2"
description = "Oil & Rope is a Django project for managing Roleplay Games."
authors = ["LeCuay <suso.becerra98@gmail.com>"]
license = "MIT"
repository = "https://github.com/oil-rope/oil-and-rope/"

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.4"
channels = "^3.0"
channels-redis = "^3.3"
crispy-bootstrap5 = "^0.6"
"discord.py" = {extras = ["voice"], version = "^1.7"}
django-allauth = "^0.49"
django-crispy-forms = "^1.14"
django-ckeditor = "^6.2"
django-cors-headers = "^3.11"
django-filter = "^21.1"
django-mptt = "^0.13"
django-mptt-admin = "^2.2"
django-prometheus = "^2.2"
djangorestframework = "^3.12"
drf-nested-routers = "^0.93"
drf-spectacular = "^0.22.1"
docutils = "~0.17.1"  # Required by admindocs even if not used
Faker = "^13.3"
gunicorn = "^20.1"
Pillow = "^9.0"
psycopg2 = "^2.9"
python-dateutil = "^2.8"
python-dotenv = "^0.19"
python3-openid = "^3.2"  # Requirement for `django-allauth`
PyYAML = "^6.0"
requests = "^2.27"
requests-oauthlib = "^1.3"  # Requirement for `django-allauth`
Twisted = {extras = ["tls", "http2"], version = "^22.2"}
uritemplate = "^4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6"
coverage = "^6.3"
django-coverage-plugin = "^2.0"
django-debug-toolbar = "^3.2"
django-extensions = "^3.1"
dpytest = "^0.5"
flake8 = "^4.0"
flake8-django = "^1.1"
freezegun = "^1.2"
ipdb = "^0.13"
isort = "^5.10"
model_bakery = "^1.4"
pytest = "^7.0"
pytest-asyncio = "^0.18"
pytest-cov = "^3.0"
pytest-django = "^4.5"
pytest-mock = "^3.7"
pytest-xdist = "^2.5"
Sphinx = "^4.5"
sphinx-rtd-theme = "^1.0"
werkzeug = "~2.0"
selenium = "^4.1"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
